[package]
name = "smart_route"
version = "0.1.0"
authors = ["KiriosK <KiriosK@yandex.ru>"]
edition = "2018"

[dependencies]
chrono = "0.4"
itertools = "0.8.0"
diesel = {version="1.1.0", features = ["postgres"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hyper = "0.12"
futures = "0.1" 
postgres = "0.15.1"